Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15692

performance regressions for files in stripe directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.15.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      performance regressions in stripe directory on 2.15.0 (commit;4d93fd7) were found against b2_14(commit:d4b9557).
      Here is configuration.

      4 x MDS (1 x MDT per MDS)
      4 x OSS (2 x OSS per OSS)
      40 x client
      
      [root@ec01 ~]# mkdir -p /exafs/d0/d1/d2/mdt_stripe/
      [root@ec01 ~]# lfs setdirstripe -c 4 -D /exafs/d0/d1/d2/mdt_stripe/
      [root@ec01 ~]# salloc -p 40n -N 40 --ntasks-per-node=16 mpirun --allow-run-as-root -oversubscribe -mca btl_openib_if_include mlx5_1:1 -x UCX_NET_DEVICES=mlx5_1:1 /work/tools/bin/mdtest -n 2000 -F -i 3 -p 10 -v -d /exafs/d0/d1/d2/mdt_stripe/
      

      Here is test resutls.

      server: version=2.15.0_RC2_22_g4d93fd7
      client: version=2.15.0_RC2_22_g4d93fd7
      
      SUMMARY rate: (of 3 iterations)
         Operation                     Max            Min           Mean        Std Dev
         ---------                     ---            ---           ----        -------
         File creation              103733.203      76276.410      93728.713      15168.101
         File stat                  693152.731     656461.448     671671.960      19132.425
         File read                  259081.462     247951.008     253393.168       5569.308
         File removal               145137.390     142142.699     143590.068       1499.846
         Tree creation                  48.035          1.922         17.475         26.467
         Tree removal                   35.643         15.861         24.045         10.323
      
      server: version=2.14.0_21_gd4b9557
      client: version=2.14.0_21_gd4b9557
      
      SUMMARY rate: (of 3 iterations)
         Operation                     Max            Min           Mean        Std Dev
         ---------                     ---            ---           ----        -------
         File creation              138939.425      81336.388     117014.695      31167.261
         File stat                 1678888.952    1580356.340    1645190.276      56162.463
         File read                  569731.788     528830.155     546121.363      21170.387
         File removal               191837.291     186597.900     188595.661       2832.527
         Tree creation                 120.108          0.986         51.078         61.778
         Tree removal                   40.863         33.203         37.987          4.171
      

      As far as I observed this, it seems to be server side regression since because performance with lustre-2.15 clients + lustre-2.14 was ok below.

      server: version=2.14.0_21_gd4b9557
      client: version=2.15.0_RC2_22_g4d93fd7
      
      SUMMARY rate: (of 3 iterations)
         Operation                     Max            Min           Mean        Std Dev
         ---------                     ---            ---           ----        -------
         File creation              132009.360      74074.615     106514.108      29585.056
         File stat                 1570754.679    1457120.401    1532703.082      65457.038
         File read                  563710.286     540228.432     553871.772      12194.544
         File removal               189557.092     186065.253     187536.946       1809.374
         Tree creation                  54.678          1.883         19.576         30.399
         Tree removal                   42.065         41.677         41.875          0.194
      

      I am running 'git bisect', can hopefully find an commit where started regression soon.

            laisiyao Lai Siyao
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: